# YouOS

./: .gitignore  README.md  cross_x86_64.ini  meson.build
boot/: meson.build
include/kernel/: ata.h  boot_anim.h  crash.h  elf.h  fat16.h  fb.h  gdt.h  heap.h  idt.h  initrd.h  ipc.h  irq.h  keyboard.h  kjmp.h  mouse.h  pic.h  pmm.h  process.h  syscall.h  syslog.h  terminal.h  uhci.h  userspace.h  vfs.h  vga.h  vmm.h
include/user/: syscall.h
iso/boot/grub/: grub.cfg
kernel/: boot_anim.c  crash.c  ipc.c  linker.ld  meson.build  syslog.c
kernel/arch/x86_64/: boot.asm  gdt.c  gdt_flush.asm  idt.c  idt_load.asm  idt_stubs.asm  irq.c  irq_stubs.asm  kernel_main.c  kjmp.asm  pic.c  switch.asm  syscall.c  syscall_entry.asm  usermode.asm
kernel/drivers/: ata.c  fb.c  keyboard.c  mouse.c  terminal.c  uhci.c  vga.c
kernel/fs/: elf.c  fat16.c  fat16_vfs.c  initrd.c  initrd_blob.asm  ramfs.c  vfs.c
kernel/mm/: heap.c  pmm.c  userspace.c  vmm.c
kernel/proc/: scheduler.c
kernel/userspace/: hello.c
os/: ai_assistant.py  app_store.py  auth.py  boot_manager.py  browser.py  calculator.py  calculator.py.backup  config.json  config.py  debug_desktop.py  desktop.py  face_recognition_module.py  file_manager.py  football_scores.py  hardware_manager.py  init  main.py  main_simple.py  media_viewer.py  my_computer.py  network_manager.py  package_manager.py  process_manager.py  profile_widget.py  recycle_bin.py  screenshot.py  security_manager.py  service_manager.py  settings.py  start.py  store_data.json  system_config.py  systemdata.json  sysupdate.py  task_manager.py  terminal.py  text_editor.py  users.json  utils.py  widgets.py  (+4 more)
os/assets/: Windows 7 Logoff _ (Sound)(Soundeffect) (FREE DOWNLOAD)(M4A_128K).m4a  Windows 7 Logon _ (Sound) (Soundeffect) (FREE DOWNLOAD)(M4A_128K).m4a
os/games/: chess_game.py  pong.py  pong_game.py  xo_game.py
os/programs/chess/: app_info.json
os/programs/matrix_calculator/: matrix_calculator.py
os/programs/notes/: app_info.json
os/programs/paint/: app_info.json
os/programs/whatsapp/: app_info.json  main.py
os/programs/yousuf_desk_tools/: app_info.json
tools/: convert_start_icon.py  make_wallpaper.py  mkinitrd.py  mkinitrд.py
tools/scripts/: build.sh  debug.sh  run.sh
user/: Makefile  user.ld
user/files/: greeting.txt
user/lib/: crt0.asm  syscall.h
user/src/: cat.c  desktop.c  desktop.c.bak  fbtest.c  hello.c  shell.c  start_icon.h
userspace/apps/: hello.c
